@@ -10,6 +10,10 @@
    functionality works as expected.
    (Jelmer Vernooĳ, #780)
 
+ * Add porcelain submodule commands: ``submodule_update``, ``submodule_add`` 
+   CLI command, and ``submodule_update`` CLI command. Add ``--recurse-submodules``
+   option to ``clone`` command. (#506, Jelmer Vernooĳ)
+
 0.23.1	2025-06-30
 
  * Support ``untracked_files="normal"`` argument to ``porcelain.status``,
